--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
+/* --------------------CSS HOME----------------------*/
 .bodyHome{
     background-image: url("https://cdn.autopapo.com.br/box/uploads/2023/08/10112255/01-bugatti-css-golden-era.jpg");
-    background-size: 1840px;
+    background-size: 2140px;
 }
-.bodySobreNos{
-    background-image: url("https://i.pinimg.com/originals/87/7d/1f/877d1f94e749dfcc4bb46773ef063f78.jpg");
-    background-size: 1540px;
-}
-/*-----------------------------------------------------------------------*/
+/*------------------header geral---------------------*/
 header{
     width: 100%;
     height: 100px;
@@ -31,7 +28,7 @@ header{
     display: flex;
     justify-content: center;
 }
-a {
+a{
     text-decoration: none;
     color: rgb(255, 255, 255);
 }
@@ -66,34 +63,28 @@ a:hover{
     display: flex;
     justify-content: center;
 }
-
-/*-----------------------------------------------------------------------*/
-
-section{
+/*-------------------section home----------------------*/
+.sectionHome{
     width: 100%;
-    height: 600px;
+    height: 1400px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
-.logoSection{
-    width: 20%;
-    height: 50px;
-    margin-bottom: 20px;
-}
-.texto{
+.textoHome{
     width: 80%;
     height: 220px;
     margin-bottom: 40px;
 }
-.texto p{
+p{
+    margin-left: 15px;
+    margin-top: 1px;
     display: flex;
     justify-content: center;
     color: white;
 }
-/*-----------------------------------------------------------------------*/
-
+/*---------------------footer geral--------------------------*/
 footer{
     padding: 70px;
     display: flex;
@@ -105,6 +96,27 @@ footer{
 .adm{
     color: white;
 }
-.local{
+.redesSociais{
     color: white;
 }
+
+/*------------------css pag sobre nos------------------*/
+.bodySobreNos{
+    background-image: url("https://i.pinimg.com/originals/87/7d/1f/877d1f94e749dfcc4bb46773ef063f78.jpg");
+    background-size: 1540px;
+}
+/*----------------section sobre nos----------------------*/
+.sectionSobreNos{
+    width: 100%;
+    height: 600px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.textoSobreNos{
+    width: 80%;
+    height: 220px;
+    margin-bottom: 40px;
+}
+/*-------------------------------------------------------------*/
