--- a/style.css
+++ b/style.css
@@ -72,17 +72,28 @@ a:hover{
     justify-content: center;
     align-items: center;
 }
+.carrosselHome{
+    border: solid 1px;
+    width: 50%;
+    height: 500px;
+    margin-bottom: 90px;
+}
+.oi{
+    width: 50%;
+    height: 500px;
+}
 .textoHome{
+    background: rgba(0, 0, 0, 0.514);
+    border-radius: 15px;
     width: 80%;
     height: 220px;
     margin-bottom: 40px;
 }
 p{
+    color: rgb(255, 255, 255);
     margin-left: 15px;
     margin-top: 1px;
-    display: flex;
-    justify-content: center;
-    color: white;
+    margin-top: 10px;
 }
 /*---------------------footer geral--------------------------*/
 footer{
