--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 /* --------------------CSS HOME----------------------*/
 .bodyHome{
-    background-image: url("https://cdn.autopapo.com.br/box/uploads/2023/08/10112255/01-bugatti-css-golden-era.jpg");
+
     background-size: 2140px;
 }
 /*------------------header geral---------------------*/
 header{
+    background-color: black;
     width: 100%;
     height: 100px;
     display: flex;
@@ -69,24 +70,34 @@ a:hover{
     height: 1400px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+ 
 }
 .carrosselHome{
     border: solid 1px;
-    width: 50%;
-    height: 500px;
     margin-bottom: 90px;
 }
+.textoCarrossel{
+    position: relative;
+    bottom: 73%;
+    left: 100px;
+    color: rgb(255, 255, 255);
+    font-size: 78px;
+    font-size: bold;
+    width: 31%;
+}
+.textoConheca{
+    font-size: 55px;
+}
+
 .oi{
-    width: 50%;
-    height: 500px;
+    width: 100%;
+    height: 950px;
 }
 .textoHome{
     background: rgba(0, 0, 0, 0.514);
     border-radius: 15px;
-    width: 80%;
-    height: 220px;
+    width: 50%;
+    height: 320px;
     margin-bottom: 40px;
 }
 p{
