--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* --------------------CSS HOME----------------------*/
 .bodyHome{
-
+    background-color: black;
     background-size: 2140px;
 }
 /*------------------header geral---------------------*/
@@ -12,7 +12,6 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-
 .listaMenu1{
     width: 25%;
     height: 60px;
@@ -67,40 +66,69 @@ a:hover{
 /*-------------------section home----------------------*/
 .sectionHome{
     width: 100%;
-    height: 1400px;
+    height: 1450px;
     display: flex;
     flex-direction: column;
- 
-}
-.carrosselHome{
-    border: solid 1px;
-    margin-bottom: 90px;
-}
-.textoCarrossel{
-    position: relative;
-    bottom: 73%;
-    left: 100px;
-    color: rgb(255, 255, 255);
-    font-size: 78px;
-    font-size: bold;
-    width: 31%;
-}
-.textoConheca{
-    font-size: 55px;
 }
 
-.oi{
+.carrosselHome{
+    margin-bottom: 90px;
+}
+.textoCarrossel1pg{
+    margin-left: -130px;
+    margin-bottom: 350px;
+    font-size: 78px;
+    width: 48%;
+}
+.textoCarrossel2pg{
+    font-size: 55px;
+}
+.imgCarrossel{
     width: 100%;
-    height: 950px;
+    height: 650px;
+}
+p.texto2Carrossel{
+    margin-bottom: -30px;
+    font-size: 30px;
+}
+.botaoSlide{
+    margin-left: 1008px;
+    width: 110px;
 }
 .textoHome{
-    background: rgba(0, 0, 0, 0.514);
+    display: flex;
+    align-items: center;
     border-radius: 15px;
     width: 50%;
-    height: 320px;
+    height: 450px;
     margin-bottom: 40px;
+    margin-left: 600px;
 }
-p{
+.imgHome1{
+    width: 30%;
+    height: 400px;
+    margin-bottom: 10px;
+    position: relative;
+    bottom: 560px;
+}
+.imgHome2{
+    display: flex;
+    width: 50%;
+    height: 400px;
+    position: relative;
+    bottom: 560px;
+}
+.img1{
+    display: flex;
+    width: 80%;
+    height: 400px;
+}
+.img2{
+    display: flex;
+    width: 77%;
+    height: 400px;
+}
+p.textoPgHomeSobreNos{
     color: rgb(255, 255, 255);
     margin-left: 15px;
     margin-top: 1px;
