--- a/styleHome.css
+++ b/styleHome.css
@@ -6,7 +6,7 @@
 /*-------------------section home----------------------*/
 .sectionHome{
     width: 100%;
-    height: 660px;
+    height: 690px;
     display: flex;
     flex-direction: column;
 }
@@ -54,6 +54,7 @@ p.textoPgHome{
     justify-content: end;
     align-items: center;
     background-image: url("back\ carros.png");
+    background-repeat: no-repeat;
 }
 
 /*---------------media care pag HOME---------------*/
