--- a/styleGeral.css
+++ b/styleGeral.css
@@ -7,56 +7,55 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-.listaMenu2 ul, .subMenu li{
-    margin: 0;
-    padding: 0;
+/*------------------submenu---------------------*/
+.dropmenu ul {
+    margin: 12px;
 }
-.listaMenu2 ul{
-    list-style: none;
-    width: 100%;
-}
-.listaMenu2 li{
+.dropmenu li {
     float: left;
+    list-style: none;
     position: relative;
-    width: auto;
-
 }
-.listaMenu2 a{
-    color: white;
-    display: block;
-    font-size: bold 12px/20px;
-    padding: 10px 25px;
-    text-align: center;
+.dropmenu li a {
     text-decoration: none;
-    -webkit-transition: all .25s ease;
+    color: #fff;
+    display: block;
+    padding: 0.5em 1em;
 }
-
-.listaMenu2 li:hover a{
-    background: black;
-}
-
-.subMenu{
+.dropmenu li ul {
+    display: none;
     position: absolute;
-    opacity: 0;
-    visibility: hidden;
-    z-index: 1;
-    top: 35px;
-}
-
-li:hover ul.subMenu{
-    opacity: 1;
-    visibility: visible;
-    width: 100%;
-}
-
-.subMenu li:hover a{
-    background: rgb(255, 0, 0);
-}
-.subMenu li{
+    left: 0; top: 100%;
+    width: 10em;
+    box-shadow: 0 0 2px rgba(0,0,0,0.2);
+    z-index: 999;
+} 
+.dropmenu li ul li {
     float: none;
-    width: 100%;
 }
+.dropmenu li ul li ul {
+    left: 100%; top: 0;
+}
+.dropmenu li:hover > ul {
+    display: block;
+} 
+.dropmenu li.dir > a:after {
+    color: #ffffff;
+}
+.dropmenu:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.dropmenu a:hover{
+    color: #E1AB32;
+}
+.dropmenu li{
+    margin-bottom: 10px;
+}
+/*------------------Menu e logo---------------------*/
 .listaMenu1{
+    font-size: 20px;
     width: 25%;
     height: 60px;
 }
@@ -77,10 +76,10 @@ a{
     color: rgb(255, 255, 255);
 }
 a:hover{
-    color: rgb(184, 165, 0);
+    color: #E1AB32;
 }
 .logoMenuImg{
-    width: 40%;
+    width: 30%;
     height: 100px;
     display: flex;
     justify-content: center;
@@ -91,17 +90,12 @@ a:hover{
     width: 40%;
     height: 100px;
 }
-.logoMenu h1{
-    font-size: 30px;
-    display: flex;
-    justify-content: center;
-}
 .listaMenu2{
+    font-size: 20px;
     width: 25%;
     height: 60px;
 }
 .listaMenu2 ul{
-    list-style-type: none;
     display: flex;
     width: 80%;
 }
@@ -134,25 +128,15 @@ footer{
         margin-top: 14px;
         background-repeat: no-repeat;
         background-size: 3px;
-        width: 40%;
+        width: 55%;
         height: 70px; 
     }
     .listaMenu1 li{
-        width: 100%;
-        height: 25px;
-        padding: 10px;
-        color: white;
-        display: flex;
-        justify-content: center;
+        font-size: 11px;
+        padding: 25px;
     }
     .listaMenu2 li{
-        position: relative;
-        left: -60px;
-        width: 100%;
-        height: 25px;
-        padding: 10px;
-        color: white;
-        display: flex;
-        justify-content: center;
+        font-size: 11px;
+        padding: 25px;
     }
 }
