--- a/styleHome.css
+++ b/styleHome.css
@@ -6,7 +6,7 @@
 /*-------------------section home----------------------*/
 .sectionHome{
     width: 100%;
-    height: 690px;
+    height: 790px;
     display: flex;
     flex-direction: column;
 }
@@ -19,26 +19,19 @@
     font-size: 78px;
     width: 48%;
 }
-.textoCarrossel2pg{
-    font-size: 55px;
-}
 .imgCarrossel{
     width: 100%;
-    height: 650px;
-}
-p.texto2Carrossel{
-    margin-bottom: -30px;
-    font-size: 30px;
+    height: 750px;
 }
 .botaoSlide{
-    margin-left: 1008px;
-    width: 110px;
+    margin-left: 500px;
+    margin-bottom: 10px;
 }
 .textoHome{
     display: flex;
     align-items: center;
     border-radius: 15px;
-    width: 70%;
+    width: 60%;
     height: 450px;
 }
 p.textoPgHome{
@@ -46,15 +39,16 @@ p.textoPgHome{
     margin-left: 15px;
     margin-top: 1px;
     margin-top: 10px;
-    font-size: 1.3vw;
+    font-size: 1vw;
 }
 .sectionHome2{
     width: 100%;
     display: flex;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
     background-image: url("back\ carros.png");
     background-repeat: no-repeat;
+    
 }
 
 /*---------------media care pag HOME---------------*/
@@ -66,7 +60,7 @@ p.textoPgHome{
         width: 97%;
     }
 }
-@media only screen and (min-width:0px) and (max-width: 720px){
+@media only screen and (min-width:0px) and (max-width: 1040px){
     .imgCarrossel{
         width: 100%;
         height: 380px;
@@ -74,13 +68,11 @@ p.textoPgHome{
     .sectionHome{
         height: 390px;
     }
-}
-@media only screen and (min-width:0px) and (max-width: 670px){
-    p.textoPgHomeSobreNos{
-        color: rgb(255, 255, 255);
-        margin-left: 60px;
-        margin-top: 1px;
-        margin-top: 10px;
-        font-size: 1.8vw;
+    .sectionHome2{
+        background: none;
     }
+    p.textoPgHome{
+        font-size: 1.4vw;
+    }
+
 }
