--- a/styleSobre.css
+++ b/styleSobre.css
@@ -8,11 +8,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("lambo\ preta\ pag\ sobre.png");
-    background-size: 1520px;
     width: 100%;
-    height: 500px;
+    height: 650px;
     display: flex;
+}
+.lamboPreta1{
+    width: 100%;
+    height: 650px;
+    background-size: 1920px;
+    background-repeat: no-repeat;
 }
 .sectionSobreNos2{
     background-image: url("lamborghini\ preto.png");
