--- a/styleGeral.css
+++ b/styleGeral.css
@@ -9,7 +9,8 @@ header{
 }
 /*------------------submenu---------------------*/
 .dropmenu ul {
-    margin: 12px;
+    position: fixed;
+    padding: 0;
 }
 .dropmenu li {
     float: left;
@@ -20,13 +21,14 @@ header{
     text-decoration: none;
     color: #fff;
     display: block;
-    padding: 0.5em 1em;
+    padding: 0;
 }
 .dropmenu li ul {
     display: none;
     position: absolute;
     left: 0; top: 100%;
-    width: 10em;
+    padding-top: 10px;    
+    width: 17.5vw;
     box-shadow: 0 0 2px rgba(0,0,0,0.2);
     z-index: 999;
 } 
@@ -96,13 +98,13 @@ a:hover{
     height: 60px;
 }
 .listaMenu2 ul{
+    position: relative;
+    top: 10px;
     display: flex;
     width: 80%;
 }
 .listaMenu2 li{
     width: 50%;
-    height: 25px;
-    padding: 10px;
     color: white;
     display: flex;
     justify-content: center;
@@ -120,7 +122,12 @@ footer{
     color: white;
 }
 .redesSociais{
-    color: white;
+    border: solid 1px white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 20%;
+    height: 80%;
 }
 /*---------------media care header ---------------*/
 @media only screen and (min-width:0px) and (max-width: 700px){
@@ -138,5 +145,8 @@ footer{
     .listaMenu2 li{
         font-size: 11px;
         padding: 25px;
+        position: relative;
+        bottom: 10px;
     }
+   
 }
