--- a/styleGeral.css
+++ b/styleGeral.css
@@ -28,7 +28,7 @@ header{
     position: absolute;
     left: 0; top: 100%;
     padding-top: 10px;    
-    width: 17.5vw;
+    width: 18vw;
     box-shadow: 0 0 2px rgba(0,0,0,0.2);
     z-index: 999;
 } 
@@ -122,12 +122,23 @@ footer{
     color: white;
 }
 .redesSociais{
-    border: solid 1px white;
     display: flex;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
-    width: 20%;
-    height: 80%;
+    width: 50%;
+    height: 100%;
+}
+.insta{
+    width: 40px;
+    padding-left: 15px;
+}
+.twitter{
+    width: 40px;
+    padding-left: 15px;
+}
+.face{
+    width: 40px;
+    padding-left: 15px;
 }
 /*---------------media care header ---------------*/
 @media only screen and (min-width:0px) and (max-width: 700px){
