--- a/styleSobre.css
+++ b/styleSobre.css
@@ -5,41 +5,40 @@
 }
 /*----------------section sobre nos----------------------*/
 .sectionSobreNos{
+    background-image: url("lambo\ sobrenos.png");
+    background-size: 1900px;
+    background-repeat: no-repeat;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 650px;
-    display: flex;
-}
-.lamboPreta1{
-    width: 100%;
-    height: 650px;
-    background-size: 1920px;
-    background-repeat: no-repeat;
+    margin-bottom: 20px;
 }
 .sectionSobreNos2{
-    background-image: url("lamborghini\ preto.png");
-    background-size: 1400px;
-    background-position: bottom;
+    background-image: url("back\ sobrenos.png");
     background-repeat: no-repeat;
     width: 100%;
-    height: 800px;
+    height: 550px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 .textoSobreNos{
-    width: 80%;
-    height: 220px;
-    margin-bottom: 420px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 15px;
+    width: 50%;
+    height: 450px;
 }
 p.textoPgHomeSobreNos{
+    display: flex;
     color: rgb(255, 255, 255);
     margin-left: 15px;
     margin-top: 1px;
     margin-top: 10px;
-    font-size: 1.3vw;
+    font-size: 1vw;
 }
 /*-------------------------------------------------------------*/
