--- a/stylePages/styleSobre.css
+++ b/stylePages/styleSobre.css
@@ -5,7 +5,7 @@
 }
 /*----------------section sobre nos----------------------*/
 .sectionSobreNos{
-    background-image: url("lambo\ sobrenos.png");
+    background-image: url("../imgSobre/lambo\ sobrenos.png");
     background-size: 1900px;
     background-repeat: no-repeat;
     display: flex;
@@ -16,7 +16,7 @@
     margin-bottom: 20px;
 }
 .sectionSobreNos2{
-    background-image: url("back\ sobrenos.png");
+    background-image: url("../imgSobre/back\ sobrenos.png");
     background-repeat: no-repeat;
     width: 100%;
     height: 550px;
