--- a/stylePages/submenuAVENTADOR.css
+++ b/stylePages/submenuAVENTADOR.css
@@ -1,7 +1,7 @@
-.bodyRevuelto{
+.bodyAventador{
     background-color: black;
 }
-.sectionRevuelto3{
+.sectionAventador3{
     background: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
@@ -9,7 +9,7 @@
     width: 100%;
     height: 600px;
 }
-.videoRevuelto{
+.videoAventador{
     background: rgb(0, 0, 0);
     border: solid 1px;
     width: 100%;
@@ -20,12 +20,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url("back\ revuelto\ 1.png");
+    background-image: url("../imgModeloAventador/back\ aventador\ 1.png");
     background-repeat: no-repeat;
     width: 100%;
     height: 550px;
 }
-.textoRevuelto{
+.textoAventador{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -33,7 +33,7 @@
     width: 50%;
     height: 450px;
 }
-p.textoPgRevuelto{
+p.textoPgAventador{
     position: relative;
     left: 300px;
     display: flex;
@@ -48,12 +48,12 @@ p.textoPgRevuelto{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-image: url("back\ revuelto\ 2.png");
+    background-image: url("../imgModeloAventador/back\ aventador\ 2.png");
     background-repeat: no-repeat;
     width: 100%;
     height: 600px;
 }
-.textoRevuelto2{
+.textoAventador2{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -61,7 +61,7 @@ p.textoPgRevuelto{
     width: 50%;
     height: 450px;
 }
-p.textoPgRevuelto2{
+p.textoPgAventador2{
     position: relative;
     right: 300px;
     display: flex;
@@ -71,4 +71,3 @@ p.textoPgRevuelto2{
     margin-top: 10px;
     font-size: 1vw;
 }
-
